--- a/ConwyCastleSiege/src/main/resources/flags.yml
+++ b/ConwyCastleSiege/src/main/resources/flags.yml
@@ -687,12 +687,12 @@ HelmsDeep:
             z: 999
           - "==": Vector
             x: 1027
-            y: 56
+            y: 55
             z: 1000
         secondary_blocks:
           - "==": Vector
             x: 1027
-            y: 57
+            y: 56
             z: 1000
         air:
           - "==": Vector
@@ -1449,6 +1449,14 @@ HelmsDeep:
       1:
         ==: me.huntifi.castlesiege.data_types.Frame
         secondary_blocks:
+          - "==": Vector
+            x: 1022
+            y: 81
+            z: 1002
+          - "==": Vector
+            x: 1022
+            y: 81
+            z: 998
           - "==": Vector
             x: 1022
             y: 80
