--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -8,24 +8,49 @@ softdepend: [LibsDisguises, WorldEdit]
 load: STARTUP
 
 permissions:
+  # Staff
   castlesiege.admin:
-    description: Gives access to all CastleSiege admin commands
+    description: Gives access to all CastleSiege Admin commands
     children:
       castlesiege.developer: true
   castlesiege.developer:
-    description: Gives access to all CastleSiege developer commands
+    description: Gives access to all CastleSiege Developer commands
     children:
       castlesiege.moderator: true
   castlesiege.moderator:
-    description: Gives access to all CastleSiege moderator commands
+    description: Gives access to all CastleSiege Moderator commands
     children:
       castlesiege.chatmod+: true
   castlesiege.chatmod+:
-    description: Gives access to all CastleSiege chatmod+ commands
+    description: Gives access to all CastleSiege Chatmod+ commands
     children:
       castlesiege.chatmod: true
   castlesiege.chatmod:
-    description: Gives access to all CastleSiege chatmod commands
+    description: Gives access to all CastleSiege Chatmod commands
+
+  # Donator
+  castlesiege.high king:
+    description: Gives access to all CastleSiege High King commands
+    children:
+      castlesiege.king: true
+  castlesiege.king:
+    description: Gives access to all CastleSiege King commands
+    children:
+      castlesiege.duke: true
+  castlesiege.duke:
+    description: Gives access to all CastleSiege Count commands
+    children:
+      castlesiege.baron: true
+  castlesiege.baron:
+    description: Gives access to all CastleSiege Baron commands
+    children:
+      castlesiege.noble: true
+  castlesiege.noble:
+    description: Gives access to all CastleSiege Noble commands
+    children:
+      castlesiege.esquire: true
+  castlesiege.esquire:
+    description: Gives access to all CastleSiege Esquire commands
 
 commands:
   Gmc:
