--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -98,9 +98,6 @@ commands:
   Mystats:
     description: Opens a book that shows you your stats.
     usage: /Mystats
-  s:
-    description: Talk in staff chat.
-    usage: /s
   togglerank:
     description: Toggles the rank
     usage: /togglerank
@@ -151,9 +148,7 @@ commands:
   TeamChat:
     description: Talk in team-chat
     usage: /t <message>
-    aliases:
-      - team
-      - t
+    aliases: t
 
   # Info
   Discord:
@@ -196,6 +191,12 @@ commands:
     description: Skips the current map and goes directly to the next one
     usage: /nextmap
     permission: castlesiege.moderator
+    permission-message: You are not permitted to use this command!
+  StaffChat:
+    description: Talk in staff-chat
+    usage: /s <message>
+    aliases: s
+    permission: castlesiege.chatmod
     permission-message: You are not permitted to use this command!
 
   # Kits
